# corridorkey-mlx

./: .gitignore  CLAUDE.md  FROZENGROTNORM_QUICK_REFERENCE.md  README.md  RESEARCH_FINDINGS_FROZEN_GROUPNORM.md  RESEARCH_INDEX.md  btca.config.jsonc  compound-engineering.local.md  corridorkey_mlx.safetensors.sha256  loop.sh  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_edit_check.py  protect_bash.py  protect_surfaces.py  session_start.py  stop_check.py
docs/: Claude Code Autonomous Optimization Loop.md  MLX Hardware Optimization Hypotheses.md  MLX Hiera Matting Performance Deep Dive.md  MLX Optimization for Video Matting.md  MLX Video Matting Optimization Research.md  MLX Vision Transformer Optimization Research.md  MLX Vision Transformer Optimization Techniques.md  Radical Green-Screen Matting Optimization.md  Video Matting Inference Optimization Techniques.md  chatgpt-recommendations.md
docs/benchmarks/: 2026-03-09-wave2-ablation-results.md  RESULTS.md  baseline-fp32.md
docs/brainstorms/: 2026-03-08-mlx-memory-optimizations-brainstorm.md  2026-03-09-pytorch-optimization-learnings-brainstorm.md  2026-03-10-loop-orchestrator-upgrade-brainstorm.md  2026-03-11-algorithmica-hpc-insights-brainstorm.md  2026-03-12-contiguous-groupnorm-brainstorm.md  2026-03-12-coreml-ane-hybrid-brainstorm.md  (+4 more)
prompts/: phase1-backbone.md  phase2-mlx-blocks.md  phase3-conversion.md  phase4-hiera-backbone.md  phase5-assembly-parity.md  phase6-optimization.md
research/: CLAUDE_AUTORESEARCH.md  HANDOFF_NEXT_SESSION.md  HANDOFF_TO_CORRIDORKEY.md  OPTIMIZATION_SUMMARY.md  Optimizing MLX Video Matting on Apple Silicon.md  benchmark_spec.md  decision.schema.json  deep_research_prompt.md  experiments.jsonl  handoff-2026-03-13-github-project.md  handoff-2026-03-13-post-v1v2.md  handoff-2026-03-13-post-v4.md  handoff-2026-03-13-v3-groupnorm-tiling.md  handoff-2026-03-13-v4-frozen-groupnorm-results.md  handoff-2026-03-13-video-temporal.md  program.md
scripts/: audit_fidelity_budget.py  bench_compile_forward.py  bench_export_function.py  bench_groupnorm.py  bench_groupnorm_variants.py  bench_mlx.py  bench_optimizations.py  bench_refiner_dtype.py  bench_single_shot.py  bench_stream_overlap.py  bench_video.py  check_protected_surfaces.py  compare_reference.py  compound_note.py  convert_weights.py  dump_pytorch_reference.py  experiment_selective_refine.py  infer.py  infer_pytorch.py  infer_video.py  metal_trace.py  run_research_experiment.py  score_experiment.py  smoke_2048.py  smoke_engine.py  smoke_halfres_refiner.py  summarize_experiment.py  sweep_wired_limit.py  test_fused_groupnorm.py  test_groupnorm_parity.py  test_metal_groupnorm.py  validate_decision.py
tests/: conftest.py  test_compilation.py  test_conversion.py  test_decoder_parity.py  test_decoupled_resolution.py  test_end_to_end_parity.py  test_end_to_end_smoke.py  test_engine.py  test_fp16_parity.py  test_frozen_groupnorm.py  test_greenformer_forward.py  test_hiera_stage_parity.py  test_hiera_stage_shapes.py  test_import.py  test_model_contract.py  test_parity.py  test_reference_fixtures.py  test_refiner_parity.py  test_selective_refine.py  test_smoke_2048.py  test_tiling.py  test_tiling_consistency.py  test_weights.py
(+78 files in other folders)
