[project]
name = "corridorkey-mlx"
version = "0.1.0"
description = "MLX inference port of CorridorKey for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "safetensors>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
reference = [
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
corridorkey-weights = "corridorkey_mlx.weights_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corridorkey_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: heavy tests (2048 inference, etc.) — run with -m slow"]
addopts = "-m 'not slow'"

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ty.src]
include = ["src/", "tests/"]

[tool.ty.environment]
python-version = "3.11"
